k8s/ingress/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: surveyapp-ingress
  namespace: frontoffice
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - surveyapp.tn
        - api.surveyapp.tn
        - admin.surveyapp.tn
      secretName: surveyapp-tls

  rules:
    - host: api.surveyapp.tn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000

    - host: admin.surveyapp.tn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backoffice-service
                port:
                  number: 4200

    - host: surveyapp.tn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontoffice-service
                port:
                  number: 80
